# ix

./: .gitignore  readme.md
doc/: reasons.md
ixc/: .clang-format  .ocamlformat  CMakeLists.txt  Cargo.toml  core.ix  dune-project  ix.toml  main.ix  rustfmt.toml
ixc/benches/: lexer.rs
ixc/exm/: exm-001.ix
ixc/lib/: dune  emitter.ml  error.ml  file.ml  interface.ml  ixast.ml  ixlexer.mll  ixparser.mly  lexer.ml  main.ml  parser.ml  walker.ml
ixc/src/: base.hh  common.hh  error.cc  error.hh  file.cc  file.hh  lexer.cc  lexer.hh  main.c  main.cc  main.ix  main.rs  owned.hh  result.hh  token.hh
ixc/src/core/: arena.rs  environment.rs  mod.rs
ixc/src/frontend/: mod.rs
ixc/src/frontend/lexer/: lex.rs
ixc/src/frontend/parser/: ast.rs  ix.pest  parse.rs
